--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 // Breakpoints
 $tablet-breakpoint: 768px;
-$desktop-breakpoint: 1024px;
+$desktop-breakpoint: 1279px;
 
 // Colours
 // Primary
@@ -14,3 +14,6 @@ $brainflix-dark-black: #000;
 $brainflix-dark-blue: #0065AD;
 $mercury: #e1e1e1;
 $alabaster: #FAFAFA;
+
+// Functional
+$brainflix-error: #D22D2D;
