--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -1,3 +1,13 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.comment-form {
+    &__user-img {
+        @include avatar-style;
+    }
+
+    &__button {
+        @include cta-button-style;
+    }
+}
