--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,15 @@
 @use "/src/styles/partials/variables" as *;
 @use "/src/styles/partials/typography" as *;
 
+body {
+    font-family: "Avenir Next Regular";
+    @include body-copy-font;
+}
+
+li {
+    list-style: none;
+}
+
+h3 {
+    @include section-header-font;
+}
