--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -38,6 +38,7 @@
 
 @mixin section-header-font {
     @include black-bold-font;
+    color: $silver;
     font-size: 0.75rem;
     line-height: 1.25rem;
 }
@@ -75,28 +76,45 @@
 }
 
 // Styling
+@mixin flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+@mixin flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
 @mixin cta-button-style {
     color: $white;
     border-radius: 0.25rem;
     border: none;
+    height: 2.5rem;
     width: 100%;
+    margin: 1rem 0;
     background-color: $brainflix-blue;
+    &:hover{
+        background-color: $brainflix-dark-blue;
+    }
 
     @include tablet-screen {
-        min-width: 9.375rem;
+        width: 9.375rem;
         padding: 0 2rem;
     }
 }
 
 @mixin form-field-style {
     height: 2.25rem;
-    min-width: 240px;
-    width: 100vw;
+    min-width: 15rem;
+    max-width: 100vw;
     border: 0.0625rem solid $mercury;
     border-radius: 0.25rem;
-    &:active{
-        border: 0.125rem solid $brainflix-blue;        
+
+    &:active {
+        border: 0.125rem solid $brainflix-blue;
     }
+
     &:required {
         border: 0.0625rem solid $brainflix-error;
     }
@@ -110,7 +128,8 @@
     border-radius: 50%;
     width: 2.25rem;
     height: 2.25rem;
-    &--default{
+
+    &--default {
         background-color: $mercury;
     }
 }
