--- a/src/components/CommentCard/CommentCard.scss
+++ b/src/components/CommentCard/CommentCard.scss
@@ -1,3 +1,5 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+// file might be deleted
