--- a/src/components/VideoPlayer/VideoPlayer.scss
+++ b/src/components/VideoPlayer/VideoPlayer.scss
@@ -2,9 +2,18 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
 
-.video-player{
+.video-player {
     @include flex-row;
     justify-content: center;
     background-color: $brainflix-dark-black;
     width: 100%;
+
+    &__player {
+        object-fit: cover;
+        position: relative;
+        width: 100vw;
+        @include desktop-screen {
+            width: 60vw;
+        }
+    }
 }
