📱 💄 complete `CommentForm` styling

--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -128,6 +128,7 @@
     border-radius: 50%;
     width: 2.25rem;
     height: 2.25rem;
+    object-fit: cover;
 
     &--default {
         background-color: $mercury;
