--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -13,6 +13,7 @@
 
         @include tablet-screen {
             @include flex-row;
+            justify-content: space-evenly;
         }
     }
 
