--- a/src/components/CommentSection/CommentSection.scss
+++ b/src/components/CommentSection/CommentSection.scss
@@ -1,3 +1,12 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.comment-section {
+    @include flex-column;
+
+    &__list {
+        padding: 0;
+        width: 95vw;
+    }
+}
