--- a/src/components/CommentCard/CommentCard.scss
+++ b/src/components/CommentCard/CommentCard.scss
@@ -5,10 +5,15 @@
 .comment {
     margin-bottom: 1rem;
     border-top: 1px solid $mercury;
+
+    @include desktop-screen {
+        width: 60vw;
+    }
 }
 
 .comment {
     @include flex-row;
+
 
     &__img {
         @include avatar-style;
