--- a/src/components/VideoInfo/VideoInfo.scss
+++ b/src/components/VideoInfo/VideoInfo.scss
@@ -17,7 +17,7 @@
         border-bottom: 0.0625rem solid $silver;
 
         @include tablet-screen {
-            width: 95vw;
+            width: 59vw;
             border-top: 0;
             justify-content: space-between;
             gap: 0;
@@ -49,7 +49,9 @@
     }
 
     &__description {
-        width: 95vw;
+        @include tablet-screen {
+            width: 59vw;
+        }
     }
 }
 
