--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
-    width: 95vw;
+    width: 90vw;
 
     @include tablet-screen {
         @include flex-row;
@@ -65,6 +65,9 @@
 
     &__button {
         @include cta-button-style;
+        @include flex-row;
+        justify-content: center;
+        align-items: center;
         background: url("/src/assets/icons/upload.svg") no-repeat scroll 0.4375rem $brainflix-blue;
         width: 95vw;
 
