🔥 🚸 remove `videoDetailsPage`; implement sprint-2 feedback

--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -7,7 +7,7 @@
     list-style: none;
     @include desktop-screen {
         padding-left: 2rem;
-        border-left: 0.0625rem solid $silver;
+        border-left: 0.0625rem solid $mercury;
     }
 
     &__img {
