--- a/src/components/CommentCard/CommentCard.scss
+++ b/src/components/CommentCard/CommentCard.scss
@@ -22,6 +22,11 @@
 
     &__container {
         @include flex-column;
+        width: 90vw;
+
+        @include desktop-screen {
+            width: 55vw;
+        }
     }
 
     &__name {
