--- a/src/components/CommentCard/CommentCard.scss
+++ b/src/components/CommentCard/CommentCard.scss
@@ -1,3 +1,48 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
+
+.comment {
+    margin-bottom: 1rem;
+    border-top: 1px solid $mercury;
+
+    @include desktop-screen {
+        width: 60vw;
+    }
+}
+
+.comment {
+    @include flex-row;
+
+
+    &__img {
+        @include avatar-style;
+        margin: 1rem 1rem;
+    }
+
+    &__container {
+        @include flex-column;
+        width: 90vw;
+
+        @include desktop-screen {
+            width: 55vw;
+        }
+    }
+
+    &__name {
+        font-weight: bold;
+    }
+
+    &__time {
+        color: $silver;
+    }
+
+    &__channel-info {
+        @include flex-row;
+        justify-content: space-between;
+    }
+
+    &__comment {
+        margin: 0;
+    }
+}
